--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html layout:decorate="~{/layout/layout}">
+<link href="/resource/common/common.css" rel="stylesheet" type="text/css"/>
 <section layout:fragment="content" class="t-flex-1 t-flex t-justify-center t-items-center">
     <h1 class="t-text-[20px] t-font-bold">당신이 원하는 모든 강의</h1>
 </section>
